fixed links to changed directory

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -62,7 +62,7 @@ nav > ul > li > a:hover {
 }
 
 .paralax {
-  background-image: url("./assets/img/pexels-gabby-k-5302892.jpg");
+  background-image: url("../img/pexels-gabby-k-5302892.jpg");
   height: 750px;
 
   background-attachment: fixed;
