--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -1,5 +1,5 @@
 .paralax {
-    background-image: url("./assets/img/pexels-gabby-k-5302894.jpg");
+    background-image: url("../img/pexels-gabby-k-5302894.jpg");
     
   }
 
