--- a/assets/styles/artists.css
+++ b/assets/styles/artists.css
@@ -1,5 +1,5 @@
 .paralax {
-    background-image: url("./assets/img/pexels-gabby-k-5302896.jpg"); 
+    background-image: url("../img/pexels-gabby-k-5302896.jpg"); 
   }
   
 
