--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -1,5 +1,5 @@
 .paralax {
-    background-image: url("./assets/img/pexels-gabby-k-5302891.jpg"); 
+    background-image: url("../img/pexels-gabby-k-5302891.jpg"); 
   }
 
   #title {
