--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -1,136 +1,106 @@
 .paralax {
-    background-image: url("../img/pexels-gabby-k-5302894.jpg");
-    
-  }
+  background-image: url("../img/pexels-gabby-k-5302894.jpg");
+}
 
 #title {
-    margin: 8px 30px 15px 30px;
-    text-align: left;
-    color: burlywood;
-
+  margin: 8px 30px 15px 30px;
+  text-align: left;
+  color: burlywood;
 }
 
 .about-us-text {
-    display: flex;
-    justify-content: space-around;
-    margin: 10px 20px;
-
-
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 20px;
 }
 
 .about-us-text > p {
-    margin-top: 30px;
-    width: 50%;
+  margin-top: 30px;
+  width: 50%;
 }
 
 #about-img {
-    position: relative;
-    right: 50px;
-    z-index: -1;
-    margin: 10px;
-    width: 500px;
-    height: 350px;
+  position: relative;
+  right: 50px;
+  z-index: -1;
+  margin: 10px;
+  width: 500px;
+  height: 350px;
 }
 
 #about-img2 {
-    position: relative;
-    left: 50px;
-    top: -100px;
-    z-index: -1;
-    margin: 10px;
-    width: 500px;
-    height: 350px;
+  position: relative;
+  left: 50px;
+  top: -100px;
+  z-index: -1;
+  margin: 10px;
+  width: 500px;
+  height: 350px;
 }
 
 #about-logo {
-    position: absolute;
-    width: 500px;
-    margin-left: 60%;
-    margin-top: -12%;
-    
-    font-size: xx-large;
-    font-style: italic;
-    color: burlywood;
+  position: absolute;
+  width: 500px;
+  margin-left: 60%;
+  margin-top: -12%;
+
+  font-size: xx-large;
+  font-style: italic;
+  color: burlywood;
 }
 
+@media only screen and (max-device-width: 1024px) {
+  main {
+    margin-bottom: 0;
+  }
+  #title {
+    font-size: 40px;
+  }
+  #about-content {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
 
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 1024px)
-  and (-webkit-min-device-pixel-ratio: 2)
-   {
-    main {
-        margin-bottom: 0;
-    }
-    #title {
-       font-size: 40px;
-    
-    }
-    #about-content {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
+  .about-us-text {
+    font-size: 27px;
+    margin-bottom: 5%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 
-    .about-us-text {
-        font-size: 27px;
-        margin-bottom: 5%;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
+  .about-us-text > p {
+    margin: 30px 0;
+    width: 100%;
+  }
 
-    .about-us-text > p {
-        margin: 30px 0;
-        width: 100%;
-    }
-    
-    #about-img {
-        position: sticky;
-        margin: 2% 0;
-        width: 80%;
-        height: auto;
-    }
-    
-    #about-img2 {
-        position: static;
-        margin-bottom: 2%;
-        width: 80%;
-        height: auto;
-    }
+  #about-img {
+    position: sticky;
+    margin: 2% 0;
+    width: 80%;
+    height: auto;
+  }
 
-    #about-logo {
-        position: sticky;
-        width: 40%;
-        margin-top: 5%;
-        margin-bottom: 2%;
-    }
-   
+  #about-img2 {
+    position: static;
+    margin-bottom: 2%;
+    width: 80%;
+    height: auto;
+  }
+
+  #about-logo {
+    position: sticky;
+    width: 40%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+  }
 }
 
-/* Landscape */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 880px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-    
-}
-
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 2) {
-    
-}
-
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 2) {
-    
+@media only screen and (max-device-width: 780px) {
+  #title {
+    font-size: 50px;
+  }
 }
