--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,66 +1,71 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    height: 100%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;
 }
 
 /* NAVIGATION */
 
 nav {
-    z-index: 10;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 90px;
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 90px;
 }
 
 nav > h2 {
-    width: 20%;
-    color: rgb(255, 248, 236);
-    text-shadow: 1px 1px rgb(167, 152, 130);;
-    margin: 15px 20px;
+  width: 20%;
+  color: rgb(255, 248, 236);
+  text-shadow: 1px 1px rgb(167, 152, 130);
+  margin: 15px 20px;
+}
+
+.burger {
+  font-size: 1.2em;
+  display: none;
 }
 
 /* navigation menu */
 
 nav > ul {
-    margin: 15px 20px;
-    list-style-type: none;
-    display: flex;
+  margin: 15px 20px;
+  list-style-type: none;
+  display: flex;
 }
 
 nav > ul > li {
-    padding: 5px 10px;
-    text-align: center;
+  padding: 5px 10px;
+  text-align: center;
 }
 
 nav > ul > li > a {
-    text-transform: lowercase;
-    text-decoration: none;
-    color: rgb(255, 248, 236);
+  text-transform: lowercase;
+  text-decoration: none;
+  color: rgb(255, 248, 236);
 }
 
 nav > ul > li > a:hover {
-    text-decoration: underline;
-    color: blanchedalmond;
+  text-decoration: underline;
+  color: blanchedalmond;
 }
 
 /* HEADER */
 
 #header-text {
-    position: absolute;
-    z-index: 10;
-    top: 250px;
-    left: 100px;
+  position: absolute;
+  z-index: 10;
+  top: 250px;
+  left: 100px;
 
-    width: 35%;
-    font-size: xxx-large;
-    color: rgb(255, 248, 236);
-    text-shadow: 1px 1px rgb(167, 152, 130);
+  width: 35%;
+  font-size: xxx-large;
+  color: rgb(255, 248, 236);
+  text-shadow: 1px 1px rgb(167, 152, 130);
 }
 
 .paralax {
@@ -73,319 +78,341 @@ nav > ul > li > a:hover {
   background-size: cover;
 }
 
-
 /* CONTENT */
 
 main {
-    min-height: 100vh;
-    margin-top: 20px;
-    padding: 20px;
+  min-height: 100vh;
+  margin-top: 20px;
+  padding: 20px;
 }
 
 #pageTitle {
-    text-align: center;
-    color: rgb(56, 47, 31);
-    text-shadow: 1px 2px papayawhip;
-    padding-bottom: 50px;
+  text-align: center;
+  color: rgb(56, 47, 31);
+  text-shadow: 1px 2px papayawhip;
+  margin-bottom: 50px;
 }
 
 /* IMAGE & OVERLAY */
 
 /* the entire section */
 #grid-items {
-    display: grid;
-    justify-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    grid-gap: 7% 4%;
-    margin-bottom: 25%;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 7% 4%;
+  margin-bottom: 25%;
 }
 
 /* single section */
 .listing {
-    position: relative;
+  position: relative;
 }
 
 .listing-img {
-    width: 300px;
-    height: 370px;
+  width: 300px;
+  height: 370px;
 }
 
 .listing-text {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 5px;
-    left: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 5px;
+  left: 0;
 }
 
-.text{
-    display: none;
-} 
+.text {
+  display: none;
+}
 
 .listing:hover .listing-text .text {
-    background-color: rgba(188, 143, 143, 0.217);
-    
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
-   
-    
-    text-align: center;
-    font-size: larger;
-    color: white; 
-}
+  background-color: rgba(209, 177, 148, 0.418);
 
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+
+  text-align: center;
+  font-size: larger;
+  color: white;
+}
 
 /* FOOTER */
 
 footer {
-    
-    text-align: center;
-    background-color:  rgb(235, 221, 193);
-    padding: 15px;
-    min-height: 50px;
+  text-align: center;
+  background-color: rgb(209, 176, 148);
+  padding: 15px;
+  min-height: 50px;
 }
 
 #footer-sections {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr ;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 #footer-logo {
-    font-size: larger;
-    color:white;
-    text-shadow: 2px 2px rgb(167, 152, 130);
-    margin-top: 10%;
-    
+  font-size: larger;
+  color: white;
+  text-shadow: 2px 2px rgb(177, 139, 107);
+  margin-top: 10%;
 }
 
 #footer-info > p {
-    text-align: left;
-    text-transform: uppercase;
-    font-size: small;
-    padding-top: 10%;
-    color: rgb(56, 47, 31);
-
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 14px;
+  padding-top: 10%;
+  color: white;
 }
 
 section {
-    margin-top: 10px;
-    margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 #newsletter {
-    text-align: center;
+  text-align: center;
 }
 
 #newsletter > h4 {
-    padding-bottom: 10px;
-    text-align: center;
-    color: white;
-    font-weight: bolder;
-    font-size: x-large;
-    text-shadow: 2px 2px rgb(167, 152, 130);
+  padding-bottom: 10px;
+  text-align: center;
+  color: white;
+  font-weight: bolder;
+  font-size: x-large;
+  /* text-shadow: 2px 2px rgb(177, 139, 107); */
 }
 
 #newsletter-form {
-    display: block;
+  display: block;
 }
 
 #newsletter-form > input {
-    background-color:  rgba(255, 255, 255, 0.8);
-    border: 1px solid  rgb(162, 176, 191);
-    color: rgb(123, 141, 160);
-    height: 20px;
-    width: 200px;
-    padding: 5px;
-    margin: 5px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 5px;
+  color: rgb(189, 126, 74);
+  height: 20px;
+  width: 200px;
+  padding: 5px;
+  margin: 5px;
 }
 
 #subscribe {
-    color: rgb(123, 141, 160);
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid  rgb(162, 176, 191);
-    padding: 10px 20px;
-    margin: 8px 10px 15px 10px;
+  color: rgb(189, 126, 74);
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 8px 10px 15px 10px;
 }
 
 #subscribe:hover {
-    background-color:  rgba(255, 255, 255, 0.8);
-    border: 1px solid white;
-    color:  rgb(162, 176, 191);
-    transition-duration: 0.15s;
+  background-color: rgb(189, 126, 74);
+  color: white;
+  transition-duration: 0.15s;
 }
 
 #subscribe:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 
-
 #links ul {
-    padding: 0;
-    display: flex;
-    justify-content:center;
-    list-style-type: none;
-    text-align: center;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  text-align: center;
 }
 
 #links > ul > li > a {
-    text-align: center;
-    font-size: small;
-    text-decoration: none;
-    color: black;
-    padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  text-decoration: none;
+  color: white;
+  padding: 10px;
 }
 
 #links > ul > li > a:hover {
-    color:white;
+  color: rgb(189, 126, 74);
 }
 
 #credits {
-    padding:20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    font-size: small;
-    font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: small;
+  font-weight: bold;
+  color: white;
 }
 
 #credits > p {
-    text-align: center;
+  text-align: center;
 }
 
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
+@media only screen and (max-device-width: 780px) {
+  .paralax {
+    background-attachment: unset;
+  }
+  main {
+    margin-bottom: 5%;
+  }
 
-    .paralax {
-        background-attachment:unset;
-    }
-    main {
-        margin-bottom: 5%;
-    }
-    #pageTitle {
-        font-size: 30px;
-    }
+  /* NAVIGATION */
+  nav {
+    height: 10vh;
+  }
 
-    #grid-items {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin-bottom: 10%;
-        margin-left: auto;
-    }
-   
-    .listing {
-        width: 80%;
-        height: auto;
-        position: relative;
-        margin: 8%;
-    }
+  nav > h2 {
+    width: 25%;
+    font-size: 40px;
+  }
 
-    .listing-img {
-        width: 100%;
-        height:auto;
-    }  
-    .text{
-        display: inline-flex;
-        font-size: 30px;
-        color: white;
-        margin-left: 2%;
-        margin-top: 1%;
-    } 
+  .burger {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 10;
+    font-size: 3em;
+    display: block;
+    background-color: transparent;
+    border: none;
+    color: rgb(255, 248, 236);
+    text-shadow: 1px 1px rgb(167, 152, 130);
+  }
+
+  .fa {
+    font-size: 70px;
+  }
+
+  .show {
+    right: 0;
+    display: flex;
+    position: fixed;
+  }
+
+  /* navigation menu */
+
+  nav > ul {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100vh;
+    margin: 0;
+    position: absolute;
+    right: -100%;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(83, 66, 66, 0.527);
+    transition: all 400ms;
+    display: none;
+  }
+
+  nav > ul > li {
+    margin-bottom: 40px;
+  }
+
+  nav > ul > li > a {
+    font-size: 50px;
+  }
+
+  #pageTitle {
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+
+  #grid-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: auto;
+  }
+
+  .listing {
+    width: 80%;
+    height: auto;
+    position: relative;
+    margin: 6% auto;
+  }
+
+  .listing-img {
+    width: 100%;
+    height: auto;
+  }
+  .text {
+    display: inline-flex;
+    font-size: 30px;
+    color: white;
+    margin-left: 2%;
+    margin-top: 1%;
+  }
+
+  /* Footer */
+
+  #footer-sections {
+    display: none;
+  }
+
+  #links ul {
+    display: none;
+  }
+
+  #credits {
+    width: 100%;
+    padding: 0;
+    margin: 20px auto;
+    font-size: 30px;
+    color: white;
+  }
 }
 
 /* Landscape */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 880px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-    
-    header {
-        position: relative;
-    }
+@media only screen and (max-device-width: 880px) and (orientation: landscape) {
+  .paralax {
+    height: 100vh;
+    background-attachment: fixed;
+  }
 
-    #header-text {
-        top: 40vh;
-        left: 100px;
-        width: 40%;
-        font-size: xx-large;
-    }
-    
-    .paralax {
-      height: 100vh;
-    
-      background-attachment: fixed;
-    }
-    #grid-items {
-        display: grid;
-        justify-items: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        grid-gap: 3.4%;
-        margin-bottom: 15%;
-    }
-}
+  h1 {
+    font-size: 30px;
+  }
+  p {
+    font-size: 26px;
+    margin-bottom: 20px;
+  }
+  #grid-items {
+    width: 95%;
+    margin: auto;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 30px 0;
+  }
 
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 2) {
-    header {
-        position: relative;
-    }
+  .listing {
+    width: unset;
+    margin: 30px auto 0;
+  }
 
-    #header-text {
-        top: 20vh;
-        left: 100px;
-        width: 40%;
-        font-size: xx-large;
-    }
-    
-    .paralax {
-      height: 50vh;
-      background-attachment: unset;
-    }
+  .listing-img {
+    width: 310px;
+    height: 380px;
+  }
 
-    #grid-items {
-        display: grid;
-        justify-items: center;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        grid-gap: 3.4%;
-        margin-bottom: 15%
-    }
-}
-
-@media only screen 
-  and (min-device-width: 768px) 
-  and (max-device-width: 1024px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 2) {
-    .paralax {
-        height: 100vh;
-      
-        background-attachment: fixed;
-      }
-      #grid-items {
-          display: grid;
-          justify-items: center;
-          grid-template-columns: 1fr 1fr;
-          grid-template-rows: auto;
-          grid-gap: 3.4%;
-          margin-bottom: 15%;
-      }
+  .text {
+    font-size: 26px;
+  }
 }
